makes button animation pure css

--- a/Calculator/style.css
+++ b/Calculator/style.css
@@ -71,8 +71,19 @@
   border-radius: 50%;
   flex-direction: column;
   justify-content: center;
-  transition: all 0.4s ease-out;
 }
+
+.calcButton:active {
+  animation-name: btnClick;
+  animation-duration: 100ms;
+}
+
+@keyframes btnClick {
+  0% { opacity: 1;}
+  50% { opacity: .4;}
+  100% { opacity: 1;}
+}
+
 .calcButton_double {
   flex:2;
   border-radius: 30px;
