--- a/Calculator/style.css
+++ b/Calculator/style.css
@@ -71,7 +71,6 @@
   border-radius: 50%;
   flex-direction: column;
   justify-content: center;
-  transition: all 0.4s ease-out;
 }
 .calcButton_double {
   flex:2;
@@ -116,4 +115,20 @@
   color: var(--numbers_backgroundColor);
   text-align: right;
   font-weight: bold;
+}
+.calcButton:active {
+  animation-name: btnClick;
+  animation-duration: 400ms;
+}
+@keyframes btnClick {
+  
+  0% {
+    opacity:1;
+  }
+  50% {
+    opacity: 0.4;
+  }
+  100% {
+    opacity: 1;
+  }
 }
