--- a/DigitalBusinessCard/components/style.css
+++ b/DigitalBusinessCard/components/style.css
@@ -9,18 +9,20 @@ body {
   height: 100%;
   background-color:#23252C;
 }
+#root {
+  display: flex;
+  justify-content: center;
+}
 .container{
   width: 360px;
   height: 100%;
-  left: calc(50% - 200px);
-  position: relative;
   margin-top: 50px;
   border: 2px solid black;
   border-radius: 20px;
-  box-shadow: 0px 0px 20px whitesmoke;
+  box-shadow: 0 0 20px #f5f5f5;
   overflow-x: hidden;
-  background-color: #1A1B21;
-  color: white;
+  background-color: #1a1b21;
+  color: #fff;
 }
 .container > img {
   width: 100%;
