--- a/tenzies/src/components/App.css
+++ b/tenzies/src/components/App.css
@@ -45,7 +45,7 @@ main {
 .dice h2 {
   font-size: 2rem;
 }
-#roll--button {
+#roll--button, #roll--congrats {
   height: 36px;
   width: 120px;
   background-color: rgb(80, 53, 255);
@@ -56,8 +56,16 @@ main {
   border-radius: 5px;
   transition: all 0.3s ease-out;
   cursor: pointer;
+  display: block;
+  margin: 30px;
 }
-
+#roll--congrats {
+  background-color: transparent;
+  font-size: 1.2rem;
+  box-shadow: none;
+  border: none;
+  color: black;
+}
 #roll--button:hover {
   background-color: rgba(80, 53, 255,0.8);
 }
@@ -115,7 +123,18 @@ main {
 .five--second {
   justify-content: center;
 }
-
+.roll--count {
+  display: flex;
+  width: 280px;
+}
+.roll--count > h6  {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  font-size: 1.2rem;
+  align-items: center;
+  padding: 3px;
+}
 
 @media (max-width:380px){
   #root {
